--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>
       Map
@@ -10,6 +10,37 @@
       <button ion-button (click)="openDetails()">Collect Data</button>
     </ion-buttons>
   </ion-navbar>
+</ion-header> -->
+<!-- <ion-header>
+  <ion-toolbar>
+    <ion-buttons start>
+      <button>
+        <ion-icon name="create"></ion-icon>
+      </button>
+    </ion-buttons>
+
+    <ion-segment>
+      <ion-segment-button value="new">
+        New
+      </ion-segment-button>
+      <ion-segment-button value="hot">
+        Hot
+      </ion-segment-button>
+    </ion-segment>
+
+    <ion-buttons end>
+      <button>
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header> -->
+<ion-header no-shadow>
+  <ion-toolbar>
+    <ion-buttons start>
+      <ion-icon name="create"></ion-icon>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
