added side menu

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,10 +25,10 @@
         View Data
       </ion-segment-button>
     </ion-segment>
-
-        <ion-buttons left>
-      <ion-icon class="header-icon" name="md-list"></ion-icon>
-    </ion-buttons>
+  
+    <button ion-button left menuToggle>
+      <ion-icon class="header-icon" name="menu" ></ion-icon>
+    </button>
   </ion-toolbar>
 </ion-header>
 <ion-content>
