--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -5,7 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header >
+
   <ion-navbar >
+    <button ion-button left menuToggle>
+      <ion-icon class="header-icon" name="menu" ></ion-icon>
+    </button>
     <ion-title>Collect Data</ion-title>
   </ion-navbar>
 
