--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -57,6 +57,6 @@
   <button ion-button color="secondary" (click)="save() ">Save</button>
 
 
-  <button ion-button color="primary" (click)="getGPS() ">GPS</button>
+  <button ion-button color="primary" (click)="showGpsConfirm()">GPS</button>
 
 </ion-content>
