--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- cordova.js required for cordova apps -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALY_dAhh9eIFgUZY4s9FuLjilI1epPGiU"
-  async defer>
-</script>
   <script src="cordova.js"></script>
+
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
