--- a/src/pages/view-data/view-data.html
+++ b/src/pages/view-data/view-data.html
@@ -24,7 +24,7 @@
     <ion-row>
         <ion-col width-65>
           <div class="data_header">
-            {{item.ques1}}
+            {{item.question1}}
           </div>
         </ion-col>
 
@@ -33,10 +33,10 @@
             <ion-icon  name="md-cloud-upload" class="upload"></ion-icon>
           </button>
           <button ion-button >
-            <ion-icon  name="md-clipboard" class="edit"></ion-icon>
+            <ion-icon  name="md-clipboard" class="edit" (click)="editData(item)"></ion-icon>
           </button>
           <button ion-button >
-            <ion-icon  name="ios-trash" class="delete"></ion-icon>
+            <ion-icon  name="ios-trash" class="delete" (click)= "removeData(item)"></ion-icon>
           </button>
         </ion-col>
       </ion-row>
@@ -45,7 +45,7 @@
   </ion-card-header>
 
   <ion-card-content>
-    {{item.lat}}
+    {{item.lattitude}}
   </ion-card-content>
 </ion-card>
 </ion-content>
