added view data and edit data

--- a/src/pages/view-data/view-data.html
+++ b/src/pages/view-data/view-data.html
@@ -33,7 +33,7 @@
             <ion-icon  name="md-cloud-upload" class="upload"></ion-icon>
           </button>
           <button ion-button >
-            <ion-icon  name="md-clipboard" class="edit" (click)="editData(item)"></ion-icon>
+            <ion-icon  name="md-clipboard" class="edit" (click)="viewAllData(item)"></ion-icon>
           </button>
           <button ion-button >
             <ion-icon  name="ios-trash" class="delete" (click)= "removeData(item)"></ion-icon>
