--- a/src/pages/view-data/view-data.html
+++ b/src/pages/view-data/view-data.html
@@ -24,7 +24,7 @@
     <ion-row>
         <ion-col width-65>
           <div class="data_header">
-            {{item.question1}}
+            {{item.nameOfScheme}}
           </div>
         </ion-col>
 
